Moved to using gwt's client bundles for maximum efficiency... used divs instead of table design, fixed bug w/safari pulsing text (very noticeable on iOS devices).

--- a/src/com/jones/wedding/public/CountDown.css
+++ b/src/com/jones/wedding/public/CountDown.css
@@ -9,7 +9,7 @@ body {
 	overflow:hidden;
 }
 
-.transbackround-container
+.transbackground-container
 {
 	height:324px;
 	width:100%;
@@ -18,7 +18,7 @@ body {
 	left:0;
 }
 
-.transbackround
+.transbackground
 {
 	position:relative;
 	top:-162px;
@@ -149,6 +149,7 @@ body {
 	position:relative;
 	top:-130px;
 	left:-317px;
+	white-space: nowrap;
 }
 
 .days
